# idle-time

./: Cargo.toml
assets/: index.html  script.js
src/: main.rs
templates/: _stats.html  index.html
