[package]
name = "idle-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.3.0"
axum = { git = "https://github.com/tokio-rs/axum", rev = "3ff45d9c96b5192af6b6ec26eb2a2bfcddd00d7d", features = ["macros", "ws"] }
axum-extra = { git = "https://github.com/tokio-rs/axum", rev = "3ff45d9c96b5192af6b6ec26eb2a2bfcddd00d7d", features = ["typed-header"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "0.3"
tokio = { version = "1.0", features = ["full"] }
tokio-macros = "2.2.0"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-attributes = "0.1.27"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[patch.crates-io]
# axum-htmx = { git = "https://github.com/robertwayne/axum-htmx" }
askama_axum = { git = "https://github.com/dobrite/askama_axum" }
